feat: 2D savings assets wishlist docs contacts
